@@ -43,7 +43,7 @@ sub_caller	Devel::NYTProf::Test::example_xsub	1	19	[ 1 0 0 0 0 ]
 sub_caller	Devel::NYTProf::Test::example_xsub	1	5	[ 1 0 0 0 0 ]
 sub_caller	Devel::NYTProf::Test::example_xsub	1	9	[ 1 0 0 0 0 ]
 sub_caller	main::launch	1	25	[ 1 0 0 0 0 ]
-sub_subinfo	Devel::NYTProf::Test::BEGIN	[ 2 8 8 0 0 0 0 0 ]
+sub_subinfo	Devel::NYTProf::Test::example_sub	[ 2 13 13 0 0 0 0 0 ]
 sub_subinfo	Devel::NYTProf::Test::example_xsub	[ 2 0 0 6 0 0 0 0 ]
 sub_subinfo	main::BEGIN	[ 1 2 2 0 0 0 0 0 ]
 sub_subinfo	main::launch	[ 1 24 24 1 0 0 0 0 ]
