@@ -6,8 +6,12 @@ Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
 
 =head2 Changes in Devel::NYTProf 2.06
 
+  NOTE: The file format has changed. Files from 2.04 and 2.05
+  can still be read by this version.
+
   Changed subroutine inclusive time to not count time
-    spent recursed into the same subroutine.
+    spent recursed into the same subroutine. That time is
+    now recorded separately, along with the max recursion depth.
   XS subs are now automatically associated with a source file that
     defines non-xsubs in the same package as the xsub.
   Global subroutine index pages no longer list subs that were never called.
